# nodejs-pypi

./: .gitignore  DEVELOPMENT.md  LICENSE  MANIFEST.in  README.md  make_wheels.py  pyproject.toml
.github/workflows/: lint.yml  release.yml  test.yaml  test.yml
build_backend/: __init__.py  build_meta.py  nodejs_downloader.py  platforms.py  remote_path.py
src/nodejs/: __init__.py  __main__.py  base_command.py  command_that_might_be_a_script.py  corepack.py  maybe_script.py  node.py  node_path.py  npm.py  npx.py
tests/: conftest.py  test_basecommand.py  test_command_line.py  test_corepack.py  test_maybe_script.py  test_node.py  test_npm.py  test_npx.py  working_directory.py
